Fix problem with click on IE and height in video

--- a/addons/EditableWindow/src/style.css
+++ b/addons/EditableWindow/src/style.css
@@ -109,6 +109,8 @@ button.addon-editable-close-full-screen-button {
     flex-grow: 1;
     display: grid;
     background-color: black;
+    height: 100%;
+    cursor: default;
 }
 
 .addon-editable-window-wrapper video {
